# elfa-mcp

./: .gitignore  LICENSE  README.md
.github/workflows/: python-tests.yaml
docs/: installation.md
python/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
python/src/elfa_mcp/: __init__.py  api_client.py  server.py  utils.py
python/tests/: __init__.py  conftest.py  test_api_client.py  test_server.py  test_utils.py
