[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elfa-mcp"
version = "0.1.0"
description = "MCP server for Elfa API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.24.0",
]

[project.scripts]
elfa-mcp = "elfa_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/elfa_mcp"]

[tool.coverage.run]
source = ["src/elfa_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]